# react-native-prisma

./: .clangd  .gitattributes  .gitignore  .yarnrc.yml  README.md  babel.config.js  copy-migrations.sh  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  react-native-prisma.gradle  react-native-prisma.podspec  tsconfig.build.json  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: check-updates.yml  ci.yml  test.yml  update-and-publish.yml
.versions/: engine  prisma-dev
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/prisma/: PrismaModule.java  PrismaPackage.java
android/src/newarch/: PrismaSpec.java
android/src/oldarch/: PrismaSpec.java
cpp/: QueryEngineHostObject.cpp  QueryEngineHostObject.h  ThreadPool.cpp  ThreadPool.h  query_engine.h  react-native-prisma.cpp  react-native-prisma.h  utils.cpp  utils.h
example/: .detoxrc.js  Gemfile  app.json  babel.config.js  dev.db  dev.db-journal  metro.config.js  package.json  react-native.config.js  schema.prisma  tailwind.config.js  tsconfig.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/client/: edge.js  index-browser.js  index.d.ts  index.js  rn.js  schema.prisma
example/client/runtime/: edge-esm.js  edge.js  library.d.ts  library.js  rn.js
example/e2e/: starter.test.js
example/ios/: File.swift  Podfile  link-assets-manifest.json
example/ios/PrismaExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/PrismaExample.xcodeproj/: project.pbxproj
example/ios/PrismaExample.xcworkspace/: contents.xcworkspacedata
example/ios/PrismaExampleTests/: PrismaExampleTests.m
example/migrations/0_init/: migration.sql
example/migrations/20240118142005_nick2/: migration.sql
example/migrations/20240119143417_nick4/: migration.sql
example/migrations/20240122145141_my_field/: migration.sql
example/src/: App.tsx  Button.tsx  db.ts  server.ts
ios/: Prisma.h  Prisma.mm
plugin/src/: index.ts  withPrisma.ts  withPrismaAndroid.ts  withPrismaIOS.ts
scripts/: bump-client.ts  check-updates.ts  download-engine.ts  utils.ts
src/: CacheManager.ts  NativePrisma.js  NativePrisma.ts  ReactiveHooksExtension.ts  ReactiveQueriesExtension.ts  index.js  index.ts
tests/: app.json  babel.config.js  package-lock.json  package.json
tests/__tests__/: App-test.tsx
tests/android/app/: build.gradle
tests/ios/tests/: Info.plist
tests/ios/tests.xcodeproj/: project.pbxproj
(+13 files in other folders)
